loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:2: error: illegal start of simple expression
while (estSurBiscuit==false); {
                            ^